# Kitsune-RenderCore

./: COMMAND.md  Cargo.toml  README.md
.github/workflows/: notify-flatpak.yml  release-on-main.yml
aur/: .SRCINFO  PKGBUILD
scripts/: check-deps.sh  install-deps.sh  install-user-service.sh  install.sh  publish-aur.sh  release-github.sh
src/: app.rs  config.rs  frame_source.rs  main.rs  monitor.rs  runtime.rs  scheduler.rs  steam.rs  video_map.rs
src/backend/: mod.rs  wayland_layer.rs  wayland_stub.rs
systemd/: kitsune-rendercore.env.example  kitsune-rendercore.service
